--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,44 @@
-.nav-link {
-  font-size: 1rem;
-  margin: 20px 0;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+nav {
+  background: #fff;
+  padding: 20px 0;
+}
+nav .container {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+nav .container .logo {
+  width: 50%;
+}
+nav .container .menu {
+  width: 50%;
+}
+nav .container .menu ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+}
+nav .container .menu ul li a {
+  text-decoration: none;
+  color: #1e1e1e;
+}
+
+.primary-btn {
+  background: linear-gradient(#2bb1fd, #0f76b0);
+  display: block;
+  padding: 10px 24px;
+  border-radius: 10px;
+  color: #fff;
+  border: none;
+  outline: none;
 }/*# sourceMappingURL=index.css.map */
