--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -1,3 +1,10 @@
-$gradient: linear-gradient(#2bb1fd, #0f76b0, to right);
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+$gradient: linear-gradient(#2bb1fd, #0f76b0);
 $light-blue: #2bb1fd;
 $dark-blue: #0f76b0;
