--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -1,4 +1,33 @@
-.nav-link {
-  font-size: 1rem;
-  margin: 20px 0;
+nav {
+  background: #fff;
+  // border-bottom: 1px solid #1e1e1e;
+  padding: 20px 0;
+
+  .container {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .logo {
+      width: 50%;
+    }
+
+    .menu {
+      width: 50%;
+
+      ul {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        list-style: none;
+
+        li a {
+          text-decoration: none;
+          color: #1e1e1e;
+        }
+      }
+    }
+  }
 }
