--- a/css/_button.scss
+++ b/css/_button.scss
@@ -2,8 +2,12 @@
   background: $gradient;
   display: block;
   padding: 10px 24px;
-  border-radius: 10px;
+  border-radius: 7px;
   color: #fff;
   border: none;
   outline: none;
+
+  &:hover {
+    color: #fff;
+  }
 }
