--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -8,11 +8,12 @@
   .grid-right {
     img {
       width: 100%;
+      margin-left: 3rem;
     }
   }
 
   .grid-left {
-    margin-top: 1rem;
+    margin-top: 4rem;
 
     .flex {
       display: flex;
