--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -1,7 +1,7 @@
 nav {
   background: #fff;
   // border-bottom: 1px solid #1e1e1e;
-  padding: 20px 0;
+  // padding: 20px 0;
 
   .container {
     width: 80%;
@@ -10,7 +10,7 @@ nav {
     align-items: center;
     justify-content: space-between;
 
-    .logo {
+    .logo img {
       width: 50%;
     }
 
@@ -26,6 +26,25 @@ nav {
         li a {
           text-decoration: none;
           color: #1e1e1e;
+          font-size: 14px;
+          position: relative;
+
+          &:before {
+            content: "";
+            position: absolute;
+            width: 120%;
+            height: 2px;
+            border-radius: 1px;
+            background-color: #3b3b3b;
+            transition: all 0.4s;
+            bottom: -10px;
+            left: 0;
+            transform: scaleX(0);
+          }
+
+          &:hover:before {
+            transform: scaleX(1);
+          }
         }
       }
     }
