--- a/css/index.css
+++ b/css/index.css
@@ -160,4 +160,4 @@ nav .container .menu ul li a:hover:before {
   color: #1e1e1e;
   margin: 20px 0;
   font-weight: bold;
-}/*# sourceMappingURL=index.css.map */
+}
